# A.C.E-V2

./: README.md  package-lock.json  package.json
backend/: tsconfig.json
backend/src/: db.ts  index.ts  server.ts
backend/src/routes/: calendar.ts  focus.ts  notes.ts  settings.ts  subjects.ts  tasks.ts  users.ts
backend/src/services/: ai.ts  gpio.ts  hardware.ts
backend/tests/: api.test.ts
data/: ace.db
frontend/apps/ai/src/: index.tsx
frontend/apps/focus/src/: index.tsx
frontend/apps/home/src/: index.tsx
frontend/apps/planner/src/: index.tsx
frontend/apps/settings/src/: index.tsx
frontend/apps/statistics/src/: index.tsx
frontend/apps/subjects/src/: index.tsx
frontend/apps/tasks/src/: index.tsx
frontend/desktop-shell/: tsconfig.json  vite.config.ts
frontend/desktop-shell/src/: App.tsx  main.tsx  styles.css
frontend/desktop-shell/src/components/: AppHost.tsx  Dashboard.tsx  NotificationCenter.tsx  SiteHeader.tsx
frontend/nextjs/: README.md  next-env.d.ts  next.config.mjs  package.json
frontend/nextjs/app/: layout.tsx  page.tsx
frontend/rust-iced/: Cargo.toml  README.md
frontend/rust-iced/src/: main.rs
frontend/rust-slint/: Cargo.toml  build.rs
frontend/rust-slint/src/: main.rs
frontend/rust-slint/ui/: app.slint
frontend/shared/src/: apps-registry.ts  store.ts
os/daemon/common/: Makefile  daemon.c  daemon.h  http.c  http.h  test_common  test_common.c
os/lib/focus/: Makefile  focus.c  focus.h  test_focus  test_focus.c
