[package]
name = "ace-rust-slint"
version = "0.1.0"
edition = "2021"
description = "A.C.E OS front-end: Rust + Slint 1.x (declarative .slint UI)."

[dependencies]
slint       = "1.7"
# `blocking` feature enabled so we can hit reqwest from a plain
# `std::thread::spawn` (idiomatic for Slint — UI thread is reserved
# for property writes via `invoke_from_event_loop`).
reqwest     = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"

[build-dependencies]
slint-build = "1.7"

[profile.release]
opt-level = 3
lto       = true
strip     = true
codegen-units = 1

[workspace]
# Crate is a leaf; see rust-iced/Cargo.toml for the rationale.
